# nitro-enclave-benchmarks

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md
certs/: server.pem
crypto_utils/: Cargo.toml
crypto_utils/src/: lib.rs
enclave/: Cargo.toml  Dockerfile  build.rs
enclave/src/: main.rs
keys/: static_keys.json
parent/: Cargo.toml
parent/src/: main.rs
parent/tests/: roundtrip.rs
