[package]
name = "crypto_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crypto_box = { version = "0.9", features = ["seal"] }
chacha20poly1305 = "0.10"
rand = "0.8"

[dev-dependencies]
proptest = "1.0"