[package]
name = "enclave"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
clap = { version = "4.0", features = ["derive"] }
crypto_utils = { path = "../crypto_utils" }
serde = { version = "1.0", features = ["derive"] }
sodiumoxide = "0.2"
tokio = { version = "1.0", features = ["full"] }
tokio-vsock = "0.5"