[package]
name = "enclave"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
clap = { version = "4.0", features = ["derive"] }
crypto_utils = { path = "../crypto_utils" }
hyper = { version = "0.14", features = ["client", "http1", "http2"] }
hyper-rustls = "0.24"
rustls = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sodiumoxide = "0.2"
tokio = { version = "1.0", features = ["full"] }
tokio-rustls = "0.24"
tokio-vsock = "0.5"