[package]
name = "parent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
clap = { version = "4.0", features = ["derive"] }
crypto_utils = { path = "../crypto_utils" }
hdrhistogram = "7.5"
hyper = { version = "0.14", features = ["server", "http1", "http2"] }
rand = "0.8"
rcgen = "0.11"
rustls = "0.21"
rustls-pemfile = "1.0"
serde = { version = "1.0", features = ["derive"] }
sodiumoxide = "0.2"
tokio = { version = "1.0", features = ["full"] }
tokio-rustls = "0.24"
tokio-vsock = "0.5"